# supply-chain-defender

./: .gitignore  README.md  pyproject.toml
.github/workflows/: supply-chain-guard.yml
docs/: ci_integration.md  incident_playbook.md  platform_iocs.md
scd/: __init__.py  cli.py  models.py
scd/iocs/: axios_compromise.json  historical_npm_attacks.json  known_bad.py  multi_ecosystem_attacks.json  python_attacks.json
scd/policies/: default_policy.json  loader.py
scd/reporters/: json_reporter.py  sbom_reporter.py  terminal_reporter.py
scd/scanners/: __init__.py  cargo_scanner.py  docker_scanner.py  git_history_scanner.py  gitlab_ci_scanner.py  go_scanner.py  host_scanner.py  ioc_scanner.py  jenkins_scanner.py  lockfile_scanner.py  maven_scanner.py  node_modules_scanner.py  nuget_scanner.py  python_scanner.py  registry_api_scanner.py  repo_scanner.py  ruby_scanner.py
tests/: test_cli_ecosystems.py  test_docker_scanner.py  test_go_cargo_scanners.py  test_lockfile_scanner.py  test_python_scanner.py  test_repo_scanner.py
